# PyPlate

./: .gitignore  .readthedocs.yaml  API.md  Experimental-Design-Proposal.md  Makefile  PyPlate.py  README.md  Recipe-Usage-Tracking.md  Slicer.py  pyplate.yaml  pyproject.toml  requirements.txt  solution_formulas.md  testing.py
.github/workflows/: python-app.yml
docs/: index.html  pyplate.html  requirements.txt  search.js
docs/pyplate/: pyplate.html  slicer.html
docs/source/: api.rst  conf.py  developers_guide.rst  experiment_design.rst  extras.rst  global.rst  index.rst  introduction.rst  old_users_guide.rst  plateslicer.rst  pyplate.rst  pyplate_pyplate.rst  recipe_01.rst  recipe_02.rst  recipe_03.rst  recipe_05.rst  recipes.rst  solution_formulas.rst  unit.rst  users_guide.rst  users_guide_01.rst  users_guide_02.rst  (+2 more)
examples/: Example.py  Test_Example.py
proposals/: Experiment-Design-modifications.md  Experimental-Design-Proposal.md  Recipe-Usage-Tracking.md  dilute.rst  usage-tracking-v2.md  usage-tracking.md
pyplate/: __init__.py  config.py  container.py  experiment_design.py  plate.py  pyplate.py  pyplate.yaml  recipe.py  sample_notebook.ipynb  slicer.py  substance.py  testyaml.py  unit.py
tests/: conftest.py  fixtures.py  mock_functions.py  test_Container.py  test_Experiment.py  test_ExperimentalSpace.py  test_Factor.py  test_Plate.py  test_Recipe.py  test_Slicer.py  test_Substance.py  test_Unit.py  test_convert.py  test_convert_to_unit_value.py  test_create_solution.py  test_dilute.py  test_get_substance_used2.py  test_mix_iadd.py  test_recipe_amount_remaining.py  test_recipe_amount_used.py  test_recipe_get_container_flows.py  test_recipe_get_substance_used.py  test_recipe_volume_used.py  test_transfers.py  test_volume_used_Plate_transfer.py  unit_test_constants.py
(+24 files in other folders)
